# Assignments-Compilatori

./: README.md
Assignment_1/: CMakeLists.txt  LocalOpts.cpp  LocalOpts.h
Assignment_1/test/: Esperimento.c  Esperimento.ll  Esperimento.opt.bc  Esperimento.opt.ll
Assignment_2/: README.md
Assignment_3/: CMakeLists.txt  LoopWalk.cpp  LoopWalk.h
Assignment_3/test/: Loop.ll  Loop.opt.bc  Loop.opt.ll
Assignment_4/: CMakeLists.txt  LoopFusion.cpp  LoopFusion.h
Assignment_4/test/: Loop.c  Loop.ll  Loop.opt.bc  Loop.opt.ll
